# edgarai

./: .copier-answers.yml  .dockerignore  .gcloudignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  algo.py  cloudbuild.yaml  config.py  design.md  env  gcp_helper.py  main.py  pyproject.toml  requirements.txt  test_main.py  trigger_idx_load.py
download_edgar_idx/: main.py
edgar/: __init__.py  extract.py  extractor.py  filing.py  index.py  util.py
gcp_helper/: __init__.py  __main__.py
load_master_idx/: main.py  requirements.txt
scripts/: trigger.py
sec/: __init__.py  util.py
tests/: conftest.py  helper.py  test_chunking.py  test_edgar.py  test_embedding_search.py  test_extractor.py  test_filing.py  test_index.py  test_load_idx.py  test_parsing.py  test_sec.py  test_util.py
tools/: trigger_idx_load.py
